# Lab7-2

./: CMakeLists.txt  README.md
example/: CMakeLists.txt
sources/: Lab7-2.cpp
tests/: CMakeLists.txt
tests/source/: init.cpp
